--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,15 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>Awign</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/public/css/app.css">
+    <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
  
     {{{body}}}
+    
     <script src="/public/js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
