--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,10 +5,12 @@ html {
 body {
     margin: 0 auto;
     margin-bottom: 566px;
+    font-family: 'Averta Regular';
 }.app-header .container {
     width: 100%;
     background-color: #1F2D3D;
     padding-right: 0;
+    font-family: 'Averta Light';
 }
 
 .app-header .navbar-header {
@@ -52,17 +54,27 @@ body {
     text-transform: uppercase;
 }
 
+.app-header .navbar-default .navbar-nav > li.link-help > a {
+    padding-top: 15px;
+}
+
+.app-header .navbar-default .navbar-nav > li.link-help > a div {
+    font-size: 10px;
+}
+
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
     color: #C0CCDA;
     background-color: #273444;
 }
 
 .app-header .navbar-default .navbar-nav > .link-business > a {
-    color: orange;
+    color: #F07E0C;
+    font-family: 'Averta Bold';
 }
 
 .app-header .navbar-default .navbar-nav > .link-signin > a, .app-header .navbar-default .navbar-nav > .link-register > a {
     color: #F9FAFC;
+    font-family: 'Averta Bold';
 }
 
 .link-signin {
@@ -73,12 +85,16 @@ body {
     background-color: #265EFF;
 }
 
+.app-header .navbar-default .navbar-nav > li.link-register > a {
+    padding: 28px 39px;
+}
+
 .btn-register {
     background-color: #265EFF;
     color: #F9FAFC;
     border: none;
     text-transform: uppercase;
-    padding: 10px 25px;
+    padding: 10px 35px;
 }
 
 .navbar-collapse {
@@ -457,6 +473,7 @@ body {
   background-color: #3C4858;
   color: #FFF;
   padding-top: 60px;
+  font-family: 'Averta Light';
 }
 
 .footer-content {
@@ -468,7 +485,7 @@ body {
 }
 
 .footer-content p {
-    line-height: 1.5;
+    line-height: 2;
     color: #8492A6;
 }
 
