--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Awign</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/public/css/fonts.css">
     <link rel="stylesheet" type="text/css" href="/public/css/app.css">
     <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
 </head>
